Nettoyage module telnet.

--- a/_OUTPUTS/SD/PARAM.ini
+++ b/_OUTPUTS/SD/PARAM.ini
@@ -2,16 +2,26 @@
 Tempo_s=30
 
 [CHAUFFAGE]
-SeuilStart_DegC=21
-SeuilStop_DegC=25
-TempoApresCh_s=60
+SeuilStart_DegC=20
+SeuilStop_DegC=22
+TempoApresCh_s=300
 
 [EXTRACT]
-SeuilStart_DegC=26
+SeuilStart_DegC=25
 SeuilStop_DegC=23
-TempoApresEXT_s=60
+TempoApresEXT_s=300
 ActiverPendantCh=0
 
 [LOG]
-Periode_s=300
-PeriodePendantAction_s=30
+Periode_s=30
+PeriodePendantAction_s=10
+
+[ARROSAGE]
+Start_Heure=20
+Start_Minute=0
+Duree_s=250
+VolumePerPlant_ml=0
+NbPlant=0
+Pump_Debit_ml_per_h=12300
+Reservoir_Volume_ml=4000
+Reservoir_Restant_ml=0
